--- a/src/components/technologies/Technologies.module.css
+++ b/src/components/technologies/Technologies.module.css
@@ -17,3 +17,13 @@
   width: 50%;
   max-height: calc(100vh - 80px);
 }
+
+.info {
+  width: 200px;
+  height: 150px;
+  border-radius: 25px;
+  background-color: #383838;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
