--- a/src/components/technologies/technology/Technology.module.css
+++ b/src/components/technologies/technology/Technology.module.css
@@ -3,13 +3,27 @@
   align-items: center;
   justify-content: center;
 
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
+  cursor: pointer;
 
   width: 120px;
   height: 120px;
   border-radius: 25px;
-
   margin: 20px 40px;
 
   background-color: #383838;
+}
+
+/* .technology:hover {
+  scale: 1.15;
+} */
+
+.info {
+  width: 360px;
+  height: 240px;
+  border-radius: 25px;
+  background-color: #383838;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
