--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,11 @@
 }
 
 body {
-  margin: 0;
+  position: relative;
+  max-width: 1440px;
+  height: 200vh;
+  margin: 0 auto;
+
   font-family: resume-poppins-regular, -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
@@ -25,6 +29,24 @@ body {
 
   --dark-text: #161616;
   --light-text: #ffffff;
+
+  /* Скроллбары в Firefox */
+  scrollbar-width: thin; /* "auto" или "thin"  */
+  scrollbar-color: #ebebeb transparent; /* плашка скролла и дорожка */
+}
+
+/* Скроллбары в Chrome/Edge/Safari */
+body::-webkit-scrollbar {
+  width: 7px; /* ширина scrollbar */
+}
+body::-webkit-scrollbar-track {
+  background: transparent; /* цвет дорожки */
+}
+body::-webkit-scrollbar-thumb {
+  background-color: #383838; /* цвет плашки */
+  background-color: #ebebeb; /* цвет плашки */
+  border-radius: 20px; /* закругления плашки */
+  border: 3px solid transparent; /* padding вокруг плашки */
 }
 
 code {
