--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -18,3 +18,10 @@
   font-size: 25px;
   background-color: #ebebeb;
 }
+
+.links {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  text-align: center;
+}
