--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
 
   display: flex;
-  /* justify-content: space-between; */
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -12,6 +11,7 @@
   width: 100%;
   height: 100px;
   padding: 0 20px;
+  margin-bottom: -150px;
   border-radius: 50px 50px 0 0;
 
   color: #161616;
