--- a/src/components/technologies/Technologies.module.css
+++ b/src/components/technologies/Technologies.module.css
@@ -3,7 +3,8 @@
   align-items: center;
   justify-content: space-between;
 
-  height: calc(100vh - 80px);
+  height: auto;
+  /* height: calc(100vh - 80px); */
 }
 
 .block {
@@ -15,7 +16,7 @@
 
   max-width: 100%;
   width: 50%;
-  max-height: calc(100vh - 80px);
+  /* max-height: calc(100vh - 80px); */
 }
 
 .info {
@@ -26,4 +27,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media (max-width: 1400px) {
+  .block {
+    padding: 10px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .section {
+    flex-wrap: wrap;
+  }
+
+  .block {
+    width: 100%;
+  }
 }
