--- a/src/components/technologies/technology/Technology.module.css
+++ b/src/components/technologies/technology/Technology.module.css
@@ -3,7 +3,6 @@
   align-items: center;
   justify-content: center;
 
-  /* box-sizing: border-box; */
   cursor: pointer;
 
   width: 120px;
@@ -14,10 +13,6 @@
   background-color: #383838;
 }
 
-/* .technology:hover {
-  scale: 1.15;
-} */
-
 .info {
   width: 360px;
   height: 240px;
@@ -26,4 +21,22 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media (max-width: 1240px) {
+  .technology {
+    margin: 15px 20px;
+  }
+}
+
+@media (max-width: 540px) {
+  .technology {
+    margin: 10px;
+  }
+}
+
+@media (max-width: 445px) {
+  .technology {
+    margin: 5px;
+  }
 }
